# vyuu-co-pilot

./: .cursorrules  .env.template  .gitignore  README.md  auth_flow_analysis_results.json  env.example  example_database_prompts.md  langgraph.json  main.py  pyproject.toml  setup_studio.py  start_api.py  test_api.py  test_auth_flow_comprehensive.py  test_auth_flow_simple.py  test_auth_integration.py  test_complete_auth_flow.py  test_custom_jwt_implementation.py  test_database_session_manager.py  test_dual_jwt_flow.py  test_jwt_token_refresh.py  test_multi_intent_scenarios.py  test_multi_intent_with_mock_data.py  test_simplified_custom_jwt_flow.py  test_streaming_curl.sh  test_streaming_frontend.py  test_streaming_improved.py  test_three_level_advice.py  vercel.json
.cursor/: mcp.json
.github/workflows/: schema-generation.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
config/: environments.json  intent_parameters.yaml  logging-config.yaml
docs/: CUSTOM_JWT_SETUP.md  INTENT_SCHEMA_MANAGEMENT.md  api-architecture.md  api-integration-guide.md  auth-integration-examples.md  execution-planner-implementation.md  langgraph-studio-setup.md  response_synthesis_node.md  sample_advice_response.md  state-schema-examples.md  supabase-setup.md  task-1.1-summary.md  tool_execution_node.md  tools-design-decisions.md
prompts/: __init__.py
scripts/: create_conversation_sessions_table.sql  demo_clarification_question_generator.py  demo_complete_system.py  demo_completeness_validator.py  demo_decision_router.py  demo_execution_planner.py  demo_missing_param_analysis.py  demo_openai_classification.py  demo_pause_resume_clarification.py  demo_pause_resume_simple.py  demo_state_schemas.py  demo_user_response_processor.py  generate_intent_schemas.py  pre-commit-schema-check.sh  test_clarification_subgraph.py  test_connection.py  test_direct_orchestrator_subgraph.py  test_fixes.py  test_main_orchestrator.py  test_main_orchestrator_graph.py  test_openai_integration.py  verify_test_user.py
src/: __init__.py  api.py  orchestrator.py
src/config/: __init__.py  settings.py
src/graphs/: chat_graph.py  main_orchestrator_graph.py
src/nodes/: __init__.py  clarification_question_generator_node.py  clarification_resume_node.py  completeness_validator_node.py  decision_router_node.py  execution_planner_node.py  exit_with_partial_data_node.py  intent_classification_node.py  missing_param_analysis_node.py  parameter_extraction_node.py  tool_execution_node.py  user_response_processor_node.py
src/repositories/: __init__.py  account_repository.py  asset_repository.py  base_repository.py  savings_repository.py  stock_repository.py  transaction_repository.py  user_repository.py
src/schemas/: __init__.py  database_models.py  generated_intent_schemas.py  intent_schemas.py  state_schemas.py
src/services/: __init__.py  financial_service.py
src/subgraphs/: __init__.py  clarification_subgraph.py  direct_orchestrator_subgraph.py
src/tools/: __init__.py  data_fetch.py  db_action.py  db_aggregate.py  db_query.py  db_query_repository_backup.py  registry.py
src/utils/: __init__.py  auth.py  data_formatters.py  database.py  database_session_manager.py  llm_client.py  parameter_config.py
src/vyuu_copilot_v2/: api.py  orchestrator.py
src/vyuu_copilot_v2/config/: settings.py
src/vyuu_copilot_v2/graphs/: __init__.py  chat_graph.py  main_orchestrator_graph.py
src/vyuu_copilot_v2/nodes/: clarification_question_generator_node.py  completeness_validator_node.py  decision_router_node.py  execution_planner_node.py  exit_with_partial_data_node.py  intent_classification_node.py  (+5 more)
tests/: __init__.py  test_clarification_question_generator_node.py  test_completeness_validator_node.py  test_decision_router_node.py  test_execution_planner_node.py  test_exit_with_partial_data_node.py  test_intent_classification_node_simple.py  test_missing_param_analysis_node.py  test_multi_intent.py  test_parameter_extraction_basic.py  test_parameter_extraction_node.py  test_response_synthesis_node.py  test_state_schemas.py  test_tool_execution_node.py  test_user_response_processor_node.py
(+28 files in other folders)
